--- a/themes/hexo-theme-random/_config.yml
+++ b/themes/hexo-theme-random/_config.yml
@@ -13,8 +13,9 @@ menu:
 
 social:
   GitHub: https://github.com/BunnyRabbit8mile
-  Weibo: 
-  M: 
+  Weibo: https://BunnyRabbit8mile.github.io
+  M: https://BunnyRabbit8mile.github.io
+
 
 # Google analytics
 google_analytics: false
