--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Stanley 
 subtitle:
 description:
 keywords:
-author: John Doe
+author: Stanley 
 language:
 timezone:
 
@@ -67,7 +67,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Extensions
@@ -80,4 +80,4 @@ theme: hexo-theme-random
 deploy:
   type: git
   repo: git@github.com:BunnyRabbit8mile/BunnyRabbit8mile.github.io.git
-  branch: blog
+  branch: master 
