Changes to be committed: 	modified:   ../_config.yml 	modified:   ../package-lock.json 	modified:   ../package.json 	modified:   ../source/_posts/hello-world.md 	modified:   ../source/_posts/how-to-setup-blog-with-github-and-hexo.md 	modified:   ../source/_posts/test-images.md 	deleted:    ../source/_posts/test-images/2.jpg 	deleted:    ../source/_posts/test-images/3.jpeg 	deleted:    ../source/_posts/test-images/6.png 	modified:   ../source/about/index.md 	deleted:    ../source/categories/index.md 	modified:   ../source/tags/index.md 	deleted:    fexo 	deleted:    hexo-theme-random/.gitignore 	deleted:    hexo-theme-random/LICENSE 	deleted:    hexo-theme-random/README.CN.md 	deleted:    hexo-theme-random/README.md 	deleted:    hexo-theme-random/_config.yml 	deleted:    hexo-theme-random/languages/en.yml 	deleted:    hexo-theme-random/languages/zh-CN.yml 	deleted:    hexo-theme-random/layout/archive.swig 	deleted:    hexo-theme-random/layout/category.swig 	deleted:    hexo-theme-random/layout/includes/baidu-tongji.swig 	deleted:    hexo-theme-random/layout/includes/disqus.swig 	deleted:    hexo-theme-random/layout/includes/duoshuo.swig 	deleted:    hexo-theme-random/layout/includes/footer.swig 	deleted:    hexo-theme-random/layout/includes/gallery.swig 	deleted:    hexo-theme-random/layout/includes/google-analytics.swig 	deleted:    hexo-theme-random/layout/includes/head.swig 	deleted:    hexo-theme-random/layout/includes/jiathis.swig 	deleted:    hexo-theme-random/layout/includes/layout.swig 	deleted:    hexo-theme-random/layout/includes/pagination.swig 	deleted:    hexo-theme-random/layout/includes/post-title-item.swig 	deleted:    hexo-theme-random/layout/includes/recent-posts.swig 	deleted:    hexo-theme-random/layout/includes/side-pagination.swig 	deleted:    hexo-theme-random/layout/includes/social-icon.swig 	deleted:    hexo-theme-random/layout/includes/toc.swig 	deleted:    hexo-theme-random/layout/includes/user-card.swig 	deleted:    hexo-theme-random/layou

--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Stanley 
-subtitle:
-description:
-keywords:
-author: Stanley 
-language:
-timezone:
+title: Stan Lee 
+subtitle: Stay hungry, stay foolish!
+description: Stay hungry, stay foolish!
+keywords: Programming, C++, Computer Science, Machine learning, Deep Learning, Software Engineer, Programmer, Software Engineer, Management, Java, Golang, Python, Artificial Intelligence, Back-End.
+author: Stan Lee 
+language: en 
+timezone: 
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://BunnyRabbit8mile.github.io/blog
+url: http://BunnyRabbit8mile.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-random 
+theme: maupassant-hexo 
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
